--- a/src/app/components/usuario-listar/usuario-listar.component.html
+++ b/src/app/components/usuario-listar/usuario-listar.component.html
@@ -37,7 +37,8 @@
     </div>
 </div>
 
-<!-- <div class="component" *ngIf="revelar">
+<h5>revelar</h5>
+<div class="component" *ngIf="revelar">
     <div class="col-md-4" *ngFor='let usuario of usuarios'>
         <p *ngIf="usuario.rol=='admin'; else user">{{usuario.nombre}} <b>es el admin ;)</b></p>
         <ng-template #user>
@@ -52,7 +53,7 @@
             </tr>
         </tbody>
     </ng-template>
-</div> -->
+</div>
 
 <div class="component">
     <h4>Prueba con Switch</h4>
@@ -69,7 +70,7 @@
 </div>
 
 
-<!-- <div class="component" *ngIf="true">
+<div class="component" *ngIf="true">
     <form action="../user/procesar" method="post">
         <table border="1" class="table">
             <thead>
@@ -101,4 +102,4 @@
         </table>
         <button class="">Enviar</button>
     </form>
-</div> -->
+</div>
